--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "prettify": "prettier --write --ignore-path .gitignore --plugin-search-dir=."
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^3.0.1",
+    "normalize.css": "^8.0.1",
+    "sass": "^1.54.4",
+    "the-new-css-reset": "^1.7.3",
+    "vite": "^3.0.4",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
-    "@vitejs/plugin-vue": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "autoprefixer": "^10.4.8",
     "eslint": "^8.22.0",
@@ -26,10 +30,8 @@
     "lint-staged": "^13.0.3",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
-    "sass": "^1.54.4",
     "stylelint": "^14.10.0",
     "stylelint-config-prettier-scss": "^0.0.1",
-    "stylelint-config-standard-scss": "^5.0.0",
-    "vite": "^3.0.4"
+    "stylelint-config-standard-scss": "^5.0.0"
   }
 }
