--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
     "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
+    "file-saver": "^2.0.5",
     "normalize.css": "^8.0.1",
     "primeicons": "^5.0.0",
     "primevue": "^3.16.0",
