--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,14 +7,17 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "@vitejs/plugin-vue": "^3.0.1",
+    "@vueuse/core": "^9.2.0",
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
+    "daisyui": "^2.28.0",
     "file-saver": "^2.0.5",
     "normalize.css": "^8.0.1",
-    "primeicons": "^5.0.0",
-    "primevue": "^3.16.0",
+    "postcss": "^8.4.16",
     "sass": "^1.54.4",
+    "tailwindcss": "^3.1.8",
     "the-new-css-reset": "^1.7.3",
     "vite": "^3.0.4",
     "vue": "^3.2.37"
